# APE-HOI4-Tool-Studio

./: APE HOI4 Tool Studio.lnk  CMakeLists.txt  LICENSE  README.md  deploy.bat
cmake/: copy_optional_dir.cmake  update_library_revisions.cmake
docs/: Modular_Tool_System_Implementation_Outline.md  第三方Tool从零开发指南.md
plugins/APEHOI4Parser/: APEHOI4ParserBridgeTypes.h  APEHOI4ParserExports.h  APEHOI4ParserPluginExports.cpp  descriptor.htsplugin
plugins/APEHOI4Parser/main/Ast/: SyntaxKind.h  SyntaxTree.cpp  SyntaxTree.h
plugins/APEHOI4Parser/main/Core/: ParserSession.cpp  ParserSession.h  SourceText.cpp  SourceText.h
plugins/APEHOI4Parser/main/Diagnostics/: Diagnostic.h  DiagnosticBag.cpp  DiagnosticBag.h
plugins/APEHOI4Parser/main/Lexer/: Lexer.cpp  Lexer.h  Token.h
plugins/APEHOI4Parser/main/Parser/: Parser.cpp  Parser.h
plugins/APEHOI4Parser/main/Queries/: ParseResultJson.cpp  ParseResultJson.h
plugins/APEHOI4Parser/main/Utils/: Utf8.cpp  Utf8.h
plugins/DirectXMath/: DirectXMathPluginExports.cpp  descriptor.htsplugin
plugins/DirectXTex/: DirectXTexPluginExports.cpp  descriptor.htsplugin
plugins/DryadAtlas/: DryadAtlasPluginExports.cpp  descriptor.htsplugin
plugins/Lumorpha/: LICENSE  LumorphaBridgeTypes.h  LumorphaExports.h  LumorphaPluginExports.cpp  descriptor.htsplugin
plugins/TagList/: LICENSE  TagListPluginExports.cpp  descriptor.htsplugin
plugins/TagList/main/: TagManager.cpp  TagManager.h
resources/: core_resources.qrc  library_versions.json  openSource.json  package_registry.proto  resources.qrc  setup_resources.qrc  versioninfo.rc.in  windows_icon.rc
resources/UserAgreement/: en_US.md  ru_RU.md  version.json  zh_CN.md  zh_TW.md
resources/localisation/en_US/: AccountPage.yml  Advertisement.yml  Common.yml  ConfigPage.yml  ConnectionWarning.yml  Error.yml  ExternalPackage.yml  LoginDialog.yml  MainWindow.yml  SettingsPage.yml  SetupDialog.yml  StartupSplash.yml  ToolsPage.yml  Update.yml  UserAgreement.yml
resources/localisation/ru_RU/: AccountPage.yml  Advertisement.yml  Common.yml  ConfigPage.yml  ConnectionWarning.yml  Error.yml  ExternalPackage.yml  LoginDialog.yml  MainWindow.yml  SettingsPage.yml  SetupDialog.yml  StartupSplash.yml  ToolsPage.yml  Update.yml  UserAgreement.yml
resources/localisation/zh_CN/: AccountPage.yml  Advertisement.yml  Common.yml  ConfigPage.yml  ConnectionWarning.yml  Error.yml  ExternalPackage.yml  LoginDialog.yml  MainWindow.yml  SettingsPage.yml  SetupDialog.yml  StartupSplash.yml  ToolsPage.yml  Update.yml  UserAgreement.yml  meta.htsl
resources/localisation/zh_TW/: AccountPage.yml  Advertisement.yml  Common.yml  ConfigPage.yml  ConnectionWarning.yml  Error.yml  ExternalPackage.yml  LoginDialog.yml  MainWindow.yml  SettingsPage.yml  SetupDialog.yml  StartupSplash.yml  ToolsPage.yml  Update.yml  UserAgreement.yml
resources/localization/en_US/: Common.json  ConfigPage.json  Error.json  MainWindow.json  SettingsPage.json  SetupDialog.json  ToolsPage.json  Update.json
resources/localization/zh_CN/: Common.json  ConfigPage.json  Error.json  MainWindow.json  SettingsPage.json  SetupDialog.json  Update.json
resources/localization/zh_TW/: Common.json  ConfigPage.json  Error.json  MainWindow.json  SettingsPage.json  SetupDialog.json  ToolsPage.json  Update.json
resources/qml/toolhost/: FormCheckBox.qml  FormSpinBox.qml  FormTextField.qml  LoadingOverlay.qml  MacScrollBar.qml  StatusBar.qml  ThemedToolTip.qml  TopBar.qml
resources/splash/: startup_contributors.proto
resources/translations/: ru_RU.ts
setup/: Setup.cpp  Setup.h  main.cpp  setup_resources.qrc
setup/localisation/en_US/: meta.htsl  strings.yml
setup/localisation/ru_RU/: strings.yml
setup/localisation/zh_CN/: meta.htsl  strings.yml
setup/localisation/zh_TW/: meta.htsl  strings.yml
src/: AccountPage.cpp  AccountPage.h  AcrylicCudaProcessor.cpp  AcrylicCudaProcessor.h  AcrylicScreenCapture.cpp  AcrylicScreenCapture.h  Advertisement.cpp  Advertisement.h  AgreementEvidenceManager.cpp  AgreementEvidenceManager.h  ApiRequests.cpp  ApiRequests.h  AuthManager.cpp  AuthManager.h  ConfigManager.cpp  ConfigManager.h  ConfigPage.cpp  ConfigPage.h  ConnectionWarningOverlay.cpp  ConnectionWarningOverlay.h  CustomMessageBox.cpp  CustomMessageBox.h  ExternalPackageManager.cpp  ExternalPackageManager.h  FileAssociationManager.cpp  FileAssociationManager.h  FileManager.cpp  FileManager.h  GameLanguageCatalog.cpp  GameLanguageCatalog.h  GamePathDiscovery.cpp  GamePathDiscovery.h  HttpClient.cpp  HttpClient.h  LoadingOverlay.cpp  LoadingOverlay.h  LocalizationManager.cpp  LocalizationManager.h  Logger.cpp  Logger.h  (+79 more)
src/tools/FileManagerTool/: FileManagerTool.cpp  FileManagerTool.h  FileTreeWidget.cpp  FileTreeWidget.h  metadata.json
src/tools/FlagManagerTool/: FlagManagerTool.cpp  FlagManagerTool.h
tools/FileManagerTool/: FileManagerBridge.cpp  FileManagerBridge.h  FileManagerTool.cpp  FileManagerTool.h  FileManagerTool.qml  FileTreeWidget.cpp  LICENSE  descriptor.apehts  metadata.json
tools/FileManagerTool/localization/: en_US.json  zh_CN.json  zh_TW.json
tools/FileManagerTool/main/: FileManagerCore.cpp  FileManagerCore.h
tools/FlagManagerTool/: FlagManagerBridge.cpp  FlagManagerBridge.h  FlagManagerTool.cpp  FlagManagerTool.h  FlagManagerTool.qml  descriptor.apehts  metadata.json
tools/FlagManagerTool/localization/: en_US.json  zh_CN.json  zh_TW.json
tools/FlagManagerTool/main/: FlagFileSystem.h  FlagImage.cpp  FlagImage.h  FlagImagePipeline.h  FlagManagerCore.cpp  FlagManagerCore.h  FlagTypes.h
tools/FontManagerTool/: FontManagerBridge.cpp  FontManagerBridge.h  FontManagerTool.qml  descriptor.apehts
tools/FontManagerTool/main/: FontFileSystem.h  FontManagerCore.cpp  FontManagerCore.h  FontTypes.h
tools/LogManagerTool/: LogManagerBridge.cpp  LogManagerBridge.h  LogManagerTool.cpp  LogManagerTool.h  LogManagerTool.qml  descriptor.apehts
tools/LogManagerTool/main/: LogEntry.h  LogFileSystem.h  LogManagerCore.cpp  LogManagerCore.h  LogParser.cpp  LogParser.h  LogScanner.cpp  LogScanner.h
updater/: main.cpp
(+45 files in other folders)
